changes with vizualisation and speed,,,TODO speed must modified

--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        .decision{
+            display: inline-block;
+        }
+        p{
+            font-size: small;
+        }
+        img{
+            width: 20px;
+        }
+    </style>
 </head>
 <body>
+<div id="decision" class="decision">
+</div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
     <script src="./gladiator.js"></script>
     <script src="./script.js"></script>
-
 </body>
 </html>
