--- a/index.html
+++ b/index.html
@@ -1,47 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-        html,body{
+        * {
+            padding: 0;
+            margin: 0;
+        }
+
+        html,
+        body {
             width: 100vw;
             height: 100vh;
         }
-        body{
+
+        body {
             display: flex;
         }
-        .decision{
-            /* display: flex;
-            flex-wrap: wrap; */
+
+        .decision {
             height: 100%;
-            width: 50%;
+            width: 20%;
             overflow: auto;
         }
 
-        .decision div{
-        margin: 40px;
-        padding: 10px;
-        height: 50px;
-        
+        .decision div {
+            margin: 40px;
+            padding: 10px;
+            height: 50px;
+
         }
-        p{
+
+        p {
             font-size: small;
         }
-        img{
+
+        img {
             width: 20px;
+        }
+
+        .info {
+            width: 20%;
+            height: 100%;
+        }
+
+        .desc {
+            width: 300px;
+            height: 300px;
+        }
+
+        .row {
+            width: 100%;
+            height: 50%;
+            background-color: red;
+        }
+
+        .row1 {
+            display: flex;
+        }
+
+        .col {
+            width: 50%;
+            height: 100%;
+        }
+
+        .col1 {
+            background-color: lightgreen;
+        }
+
+        .col2 {
+            background-color: violet;
         }
     </style>
 </head>
-<body>
-<ul id="decision" class="decision">
 
-</ul>
+<body>
+    <ul id="decision" class="decision">
+    </ul>
+    <div class="info">
+        <div class="desc">
+            <div class="row row1">
+                <div class="col col1">
+                    <p>speed</p>
+                </div>
+                <div class="col col2">
+                    <p>power</p>
+                </div>
+            </div>
+            <div class="row">
+                <p>health</p>
+                <p>gladiator</p>
+                <p>oponent</p>
+            </div>
+        </div>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.14/p5.js"></script>
     <script src="./gladiator.js"></script>
     <script src="./script.js"></script>
 </body>
+
 </html>
