comments added ,,getAllGladiatorLocansions method is renamed and fixed speedIndicator working

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
+        /* TODO Styles */
         * {
             padding: 0;
             margin: 0;
@@ -24,8 +25,9 @@
 
         .decision {
             height: 100%;
-            width: 20%;
+            width: 10%;
             overflow: auto;
+            margin: 20px;
         }
 
         .decision div {
@@ -46,6 +48,7 @@
         .info {
             width: 20%;
             height: 100%;
+            margin: 20px;
         }
 
         .desc {
@@ -74,6 +77,9 @@
 
         .col2 {
             background-color: violet;
+        }
+        canvas{
+            margin: 20px !important;
         }
     </style>
 </head>
